--- a/package.json
+++ b/package.json
@@ -4,14 +4,17 @@
   "description": "Interacting with iframes",
   "private": true,
   "scripts": {
-    "cypress:open": "../../node_modules/.bin/cypress open",
-    "cypress:run": "../../node_modules/.bin/cypress run",
-    "skip:test:ci:firefox": "../../node_modules/.bin/cypress run --browser firefox",
-    "test:ci": "../../node_modules/.bin/cypress run",
-    "test:ci:chrome": "../../node_modules/.bin/cypress run --browser chrome",
-    "test:ci:record": "../../node_modules/.bin/cypress run --record"
+    "cypress:open": "./node_modules/.bin/cypress open",
+    "cypress:run": "./node_modules/.bin/cypress run",
+    "skip:test:ci:firefox": "./node_modules/.bin/cypress run --browser firefox",
+    "test:ci": "./node_modules/.bin/cypress run",
+    "test:ci:chrome": "./node_modules/.bin/cypress run --browser chrome",
+    "test:ci:record": "./node_modules/.bin/cypress run --record"
   },
   "dependencies": {
     "cypress-real-events": "^1.6.0"
+  },
+  "devDependencies": {
+    "cypress": "^9.4.1"
   }
 }
