--- a/package.json
+++ b/package.json
@@ -12,9 +12,9 @@
     "test:ci:record": "./node_modules/.bin/cypress run --record"
   },
   "dependencies": {
-    "cypress-real-events": "^1.6.0"
+    "cypress-real-events": "^1.7.0"
   },
   "devDependencies": {
-    "cypress": "^9.4.1"
+    "cypress": "9.5.0"
   }
 }
